[package]
name = "belfry_splitscreen_test"
authors = ["Dan Boyle <boylede@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = "0.8" 
bevy_mod_picking = {git = "https://github.com/boylede/bevy_mod_picking"}
bevy_mod_raycast = {git = "https://github.com/boylede/bevy_mod_raycast"}
bevy-inspector-egui = "0.12.1"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1