[package]
name = "belfry_splitscreen_test"
authors = ["Dan Boyle <boylede@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = "0.8.0"
bevy_mod_picking = {git = "https://github.com/boylede/bevy_mod_picking", branch = "splitscreen"}
bevy_mod_raycast = {git = "https://github.com/boylede/bevy_mod_raycast", branch = "splitscreen"}
bevy-inspector-egui = "0.12.1"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1